samples/_failures_safe/1761790302_93ded9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2ef5bed.c: In function ‘main’:
./samples/SAFE/__tmp_f2ef5bed.c:141:7: error: ‘Matrix’ has no member named ‘col’; did you mean ‘cols’?
  141 |     b.col
      |       ^~~
      |       cols
./samples/SAFE/__tmp_f2ef5bed.c:141:10: error: expected ‘;’ at end of input
  141 |     b.col
      |          ^
      |          ;
./samples/SAFE/__tmp_f2ef5bed.c:141:5: error: expected declaration or statement at end of input
  141 |     b.col
      |     ^
